"factory pattern update"